# Chip8-Emulator

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: chip8.cpp.5D9195250878B666.idx  chip8.hpp.883C46244C4454EE.idx  main.cpp.A12F10EBBBDDE19D.idx  main.cpp.FA2376C2D72F609E.idx  platform.cpp.0746CBB21C193321.idx  platform.hpp.CCA0A491791A0047.idx  renderWindow.cpp.021C94B0F24A0862.idx  renderWindow.h.5F53D38E9D197FE5.idx  renderWindow.hpp.428A6F1E6DF81C05.idx
include/: chip8.hpp  platform.hpp
src/: chip8.cpp  main.cpp  platform.cpp
